# stock-data-mcp

./: .env.example  .gitignore  Dockerfile  Procfile  README.md  pyproject.toml  railpack.toml  railway.toml
src/stock_data_mcp/: config.py  server.py
src/stock_data_mcp/clients/: dart.py  ecos.py  krx.py
src/stock_data_mcp/tools/: dart_tools.py  ecos_tools.py  krx_tools.py
