[project]
name = "stock-data-mcp"
version = "0.1.0"
description = "Korean stock data MCP server: KRX, Open DART, Bank of Korea ECOS"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["mcp", "korea", "stock", "krx", "dart", "ecos", "fastmcp"]

dependencies = [
    "fastmcp>=2.3.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.30.0",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
stock-mcp = "stock_data_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stock_data_mcp"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
